fix: changelog spacing

--- a/src/styles/old-index.css
+++ b/src/styles/old-index.css
@@ -388,3 +388,11 @@ h2.heading {
 :target {
 	scroll-margin: calc(var(--theme-sidebar-offset, 5rem) + 2rem) 0 2rem;
 }
+
+/* Dirty "hot" fixes until we re-do the changelog  */
+#grid-main h1,
+.changelog-block h2,
+.changelog-block h3,
+.changelog-block h4 {
+    margin-top: 0;
+}
